--- a/index.html
+++ b/index.html
@@ -1,46 +1,63 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <div id=welcomenav>
         <a href="./index.html">Welcome</a>
     </div>
-
     <div id=aboutmenav>
         <a href="./about.html">About Me</a>
     </div>
-
     <div id=contactnav>
         <a href="./contact.html">Contact</a>
     </div>
 
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link href="https://fonts.googleapis.com/css?family=Audiowide|Space+Mono:700" rel="stylesheet">
-    <link
+    <link href="https://fonts.googleapis.com/css?family=Armata|Mina|Unica+One" rel="stylesheet">
     <title>M9Y9</title>
-
 </head>
 
 <body>
-    
-    <div class="container">
-        <div class="nav">
-            <h2>Planet M9y9</h2>
-            <ul>
-                <li>Welcome!</li>
-                <li>About Me</li>
-                <li>Contact</li>
-            </ul>
-        </div>
+    <div id="pageheader">
+        <h1>Planet M9y9</h1>
+    </div>
 
-        <h1 id="homepage">Maya's WebSpAce</h1>
-        <div id="introduction">
-            <h3>Welcome to my site!</h3>
-            <p>
-                Thanks for stopping by. My name is Maya. Here you'll find a few random facts about me and my tech journey.
-                Enjoy :)
-            </p>
+
+    <div class="nav2">
+        <div class="photolink">
+            <a href=#btmlink1>Photo Gallery</a>
         </div>
+    </div>
+
+    <h3 id="homepage">(Maya Parnell's Website)</h3>
+
+
+    <div id="introduction">
+        <h3>Welcome to my site!</h3>
+        <p class="hello">
+            Thanks for stopping by. My name is Maya. Here, you'll find information about my tech journey and a few random facts.
+            Enjoy :)
+        </p>
+    </div>
+
+    <h1 id='btmlink1'> Photo Gallery</h1>
+
+
+    <div class="photogallery">
+        <figure class="photo-tag">
+            <a id=photo1 href='https://photos.google.com/share/AF1QipMh-6c__s4TYr1Zx6I4DPhu6TYSHOmcmpgQyciGn39ig3cboTBLXzQeii__jB37lA?key=MXNpa25Mc2F4LW5TcDVoNXFqRWNHS2hHcTZTS1dR&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/YHgt3Rql93jqtGve9WEaUUrtcpEnQ_LIWulmIMa3xm-vUJoQZLikbLPsWZJ0zDOAWQa1ysY3qAkBCyBr0x3aEBe3BkE48Uckkx6ADg2t2UdDdwdzcro14XUsdG-Bu7EaQMPpu9EA8Q=w2400' alt="Maya in Yucatan" style="width: 40%;" /></a>
+        </figure>
+
+        <figure class="photo-tag">
+            <a id=photo2
+               href='https://photos.google.com/share/AF1QipNDl_PGktKikUyujB__a4UIo7_uNVLJW-a-4YxM9occIUAiTyK3NNPjTbdDODSPZA?key=STZmcWIzQ05RMDRsejRkQjBZTXkwRVVHb29sTnpR&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/WEMa_URTDtynAyACrzoCHCHnTWtn9_FvMUcF0s_JJRfpKFhhjj8LidlYdvOkBrfwNw8EUj7w-Hw0HZb8F8efWolErM2c783RueCp5dXKzfLQ-fYRQPRDWf_Sr6jg1x1mHiSoXM4LwQ=w2400' alt="Maya at HP Corporation" style="width: 40%;" /></a>
+        </figure>
+
+        <figure class="photo-tag">
+            <a id=photo3 href='https://photos.google.com/share/AF1QipN0MSDPZOD7VRTGqOrukNNayFxJvH9VddQXMFgbJyLVmJmNusGN8jNdgOK7zwPNBA?key=bGdpOVU3NHQ0NWlUcndKbGtyV2xreUF4NmV5bVZB&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/933zqoFE_9vU4-NXdbZoYp70rknIXLE6Kxr5zKxP25emoXdYAg1wKyjSfSqi_ps5diFDOXSSJ8R2z_kNDZd10SxVosk4r-kn6dbtvId_fghvO6gBEnt3E4R7gFAqAHhm--mq4ZI4Vg=w2400' alt="Maya at Silicon Valley" style="width:50%;" /></a>
+        </figure>
+    </div>
 
 </body>
 </html>
